# 6502toC

./: .gitignore  README.md  pyproject.toml
.trunk/: trunk.yaml
docs/api/: cli.md  converter.md  diagnostics.md  generator.md  index.md  init.md  ir.md  parser.md
example/: EI.LST
plans/: 65c02-listing-to-cpp-converter-complete.md  65c02-listing-to-cpp-converter-phase-1-complete.md  65c02-listing-to-cpp-converter-phase-2-complete.md  65c02-listing-to-cpp-converter-phase-3-complete.md  65c02-listing-to-cpp-converter-phase-4-complete.md  65c02-listing-to-cpp-converter-plan.md
src/listing_to_cpp/: __init__.py  cli.py  converter.py  diagnostics.py  generator.py  ir.py  parser.py
tests/: test_cli.py  test_converter.py  test_diagnostics.py  test_generator.py  test_parser.py
