[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "listing-to-cpp"
version = "0.1.0"
description = "65C02 listing to C++ converter scaffold"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
listing-to-cpp = "listing_to_cpp.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
